# murimsim

./: .gitignore  README.md  WHAT_WE_BUILT.md  coaching.md  conftest.py  journal.md  main.py  plan.md  plan_for_rl_arch.md  pyproject.toml  refactor_plan.md
.github/: copilot-instructions.md
archive/: cache.ini  log.txt  main.py
archive/models/: agent.py
config/: default.yaml  training.yaml  training_v3.yaml
config/envs/: dense_patch.yaml  poison_heavy.yaml  resource_dense.yaml  resource_scarce.yaml
murimsim/: __init__.py  actions.py  agent.py  replay.py  sect.py  stash.py  world.py
murimsim/rl/: __init__.py  env.py  masked_recurrent_ppo.py  metrics_callback.py  multi_env.py  train.py  train_combat.py  train_lstm.py  train_lstm_v2.py  train_lstm_v3.py  train_lstm_v4.py  train_multiagent.py  train_multienv.py
scripts/: eval_settlement.py  markov_experiment.py  probe_combat.py  record_agent.py  record_combat.py  record_world.py  train.py  transfer_weights.py  validate_world.py
tests/: test_agent.py  test_combat_env.py  test_env.py  test_multiagent_env.py  test_multienv.py  test_replay.py  test_sect.py  test_sects.py  test_stash.py  test_world.py
viewer/: dashboard.html  index.html  viewer.js
